# web

./: .gitignore  CNAME  Gemfile  Makefile  Pipfile  README.md  _config.yml  about.md  archives.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  readme.md  tags.html  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
_includes/: footer.html
_posts/: 2016-11-28-welcome-to-jekyll.markdown  2017-01-23-secure-and-for-realz.md  2017-05-19-keep-trying.md  2017-09-22-keto.md  2017-10-01-consistency.md  2017-10-24-the-shrine.md
content/: chores.md  role.md  up.md
content/pages/: about.md  resume.md
docs/: archives.html  authors.html  categories.html  index.html  setup.html  tags.html  working.html
docs/author/: josh-mcvey.html
docs/category/: python-cron-crontab-brew.html  python.html
docs/drafts/: josh.html
docs/feeds/: all.atom.xml  python-cron-crontab-brew.atom.xml  python.atom.xml
docs/pages/: about.html  josh.html
docs/tag/: fun.html  headphones.html  mic.html  pelican.html  publishing.html  python.html
feeds/: all.atom.xml
output/: authors.html  categories.html
output/feeds/: all.atom.xml
simple-bootstrap/templates/: base.html
