[tool.poetry]
name = "web"
version = "0.1.0"
description = "Josh McVey's personal site"
authors = ["Josh McVey <yersh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.2.0"
black = "^19.10b0"
invoke = "^1.4.1"
pylint = "^2.5.3"
flake8 = "^3.8.3"
markdown = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
